<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/lblFoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/header"

        ></ImageView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="15dp"
            android:paddingRight="130dp"
            android:text="@string/titulo"
            android:textColor="@color/black"
            android:textSize="25dp"></TextView>

        <ImageView
            android:id="@+id/imgBookmark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="15dp"
            android:src="@drawable/ic_bookmark" />


    </LinearLayout>


    <TextView
        android:id="@+id/lblFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingTop="5dp"
        android:text="@string/fecha"></TextView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="30px">

        <Button
            android:id="@+id/btnAlquilar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="30dp"
            android:text="@string/lblrent" />


        <Button
            android:id="@+id/brnComprar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="30px"
            android:text="@string/lblbuy" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="25dp"
        android:background="@color/gray_divider" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingRight="@dimen/separacion">


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_edit_24"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/lblValoracion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5px"
                android:text="@string/valoraciones" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingRight="@dimen/separacion">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_family"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/lblPublico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5px"
                android:text="@string/publico" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingRight="@dimen/separacion">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tomato"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/porcentaje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5px"
                android:text="@string/porcentaje" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_family"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/similar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5px"
                android:text="@string/similar" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:background="@color/gray_divider" />

    <TextView
        android:id="@+id/lblDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_2x"
        android:text="@string/lblDescripcion"
        android:textSize="20dp" />


</LinearLayout>